# mlx-model-doctor

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  EXAMPLES.md  LICENSE  NOTICE  README.md  ROADMAP.md  action.yml  pyproject.toml
.github/workflows/: action-selftest.yml  ci.yml  release.yml
src/mlx_model_doctor/: __init__.py  api.py  cli.py  compat.py  context.py  environment.py  errors.py  exit_codes.py  memory.py  report.py  safetensors_header.py  sampling.py  targets.py
src/mlx_model_doctor/checks/: __init__.py  base.py  chat_template.py  compat.py  config.py  files.py  generation_config.py  memory.py  quantization.py  safetensors.py  smoke.py  tokenizer.py  vlm.py  weights.py
src/mlx_model_doctor/plugins/: __init__.py  base.py  text.py
src/mlx_model_doctor/runners/: __init__.py  core.py  smoke.py  static.py
src/mlx_model_doctor/schema/: report.v1.schema.json  sample-batch.v1.schema.json
tests/: conftest.py  fakes.py  test_api.py  test_checks_chat_template.py  test_checks_compat.py  test_checks_config.py  test_checks_files.py  test_checks_generation_config.py  test_checks_init.py  test_checks_memory.py  test_checks_quantization.py  test_checks_safetensors.py  test_checks_smoke.py  test_checks_tokenizer.py  test_checks_vlm.py  test_checks_weights.py  test_cli.py  test_collection_gating.py  test_compat.py  test_context.py  test_environment.py  test_exit_codes.py  test_fakes.py  test_hf_target.py  test_integration_assets.py  test_live_models.py  test_memory.py  test_memory_caps.py  test_package_surface.py  test_packaging.py  test_public_api.py  test_report.py  test_runners.py  test_runners_core.py  test_runners_smoke.py  test_safetensors_header.py  test_sampling.py  test_schema_contract.py  test_targets.py
tests/live/: README.md  known-broken.toml  known-good.toml
